--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -62,10 +62,10 @@
       <a class="nav-link" href="#">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Data</a>
+      <a class="nav-link" href="/search/ngs-data/">Data</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Analysis</a>
+      <a class="nav-link" href="/analysis/create/">Analysis</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Contact us</a>
@@ -76,7 +76,7 @@
   </ul>
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-      <a class="nav-link" href="#">Data upload</a>
+      <a class="nav-link" href="/uploads/ngs-data/">Data upload</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Login</a>
