--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -59,10 +59,10 @@
   <a class="navbar-brand" href="#"><h2><Strong>HIVseqDB</Strong></h2></a>
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="#">Home</a>
+      <a class="nav-link" href="/home/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/search/ngs-data/">Data</a>
+      <a class="nav-link" href="/search/advanced/">Data</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/analysis/create/">Analysis</a>
