fix the double rendering of forms

--- a/templates/base/home.html
+++ b/templates/base/home.html
@@ -16,6 +16,8 @@
         margin: auto;
         padding-left: 5%;
         padding-right: 5%;
+        padding-top: 50px;
+        padding-bottom: 50px;
 
     }
 
@@ -27,14 +29,8 @@
         color: black;
         font-size: 70px;
         padding-top: 50px ;
-        padding-bottom:  0px;
         font-family: bold;
     }
-
- .scroll {
-    overflow-y: scroll ;
-    height: 350px;
- }
 
  .params {
      margin: auto;
@@ -53,7 +49,7 @@
   p {
     padding-top: 10px;
     padding-bottom: 20px;
-    font-size: larger;
+    font-size: medium;
     }
 
  .card-title, .card-text {
@@ -86,8 +82,8 @@
                 <div class="card-body">
                     <h3 class="card-title"> <i class="fa fa-database" aria-hidden="true"></i>
                         &nbsp Data management</h3>
-                    <p class="card-text">Secure and proper management of uploaded NGS data, matched with sample data.
-                        HIVseqDB provides a is higly searchable database protected through user authefication.
+                    <p class="card-text">Secure management of uploaded NGS data, matched with sample data.
+                        HIVseqDB provides a searchable database protected through user authefication.
                     </p>
                     <a class="btn btn-secondary btn-lg btn-block check" href="#">More</a>
                 </div>
@@ -116,7 +112,7 @@
             </div>
         </div>
     </div>
-<br>    
-</div>   
+</div> 
+<br>  
 <!-- The home cards -->
 {% endblock %}
