--- a/templates/analysis/detailed-analysis-results.html
+++ b/templates/analysis/detailed-analysis-results.html
@@ -11,11 +11,14 @@
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 <style>
     .analysis-container {
-        width: 90%;
+        height: 100%;
+        /* width: 0%; */
         border-radius: 5px;
         background-color:#F8F8F8; 
         margin: auto;
-        height: 100%;
+        padding-left: 5%;
+        padding-right: 5%;
+
     }
     .instructions {
     height: 100px;
@@ -26,7 +29,7 @@
     justify-content: center;
     flex-direction: column;
     padding: 20px 20px 20px 50px;
-    border-bottom: 1px solid #E0E0E0;     
+    border-bottom: 1px solid rgb(70,130,180); 
  }
     .analysis-header {
     height: 100px;
