--- a/templates/search/sample-data.html
+++ b/templates/search/sample-data.html
@@ -11,11 +11,14 @@
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 <style>
     .analysis-container {
+        height: 100%;
         width: 90%;
         border-radius: 5px;
         background-color:#F8F8F8; 
         margin: auto;
-        height: 100%;
+        padding-left: 5%;
+        padding-right: 5%;
+
     }
     .instructions {
     height: 100px;
@@ -36,7 +39,7 @@
 /*    align-items: center; */
     justify-content: center;
     flex-direction: column;
-    border-bottom: 1px solid #E0E0E0; 
+    border-bottom: 1px solid rgb(70,130,180); 
   /*  background-color:lightgrey; */
 
  }
