--- a/templates/uploads/upload-NGS-data.html
+++ b/templates/uploads/upload-NGS-data.html
@@ -11,23 +11,18 @@
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 <style>
     .analysis-container {
-        width: 90%;
+        height: 100%;
+        /* width: 90%; */
         border-radius: 5px;
         background-color:#F8F8F8; 
         margin: auto;
-        height: 100%;
+        padding-left: 5%;
+        padding-right: 5%;
+        padding-top: 50px;
+        padding-bottom: 50px;
+
     }
-    .instructions {
-    height: 100px;
-    width: 100%;
-    border-radius: 5px;
-    display: flex;
-/*    align-items: center; */
-    justify-content: center;
-    flex-direction: column;
-    padding: 20px 20px 20px 50px;
-    border-bottom: 1px solid #E0E0E0;     
- }
+    
     .analysis-header {
     height: 100px;
     width: 100%;
@@ -36,14 +31,13 @@
 /*    align-items: center; */
     justify-content: center;
     flex-direction: column;
-    border-bottom: 1px solid #E0E0E0; 
+    border-bottom: 1px solid rgb(70,130,180); 
   /*  background-color:lightgrey; */
 
  }
  .icon {
      color: black;
      font-size: 40px;
-     padding: 20px 20px 20px 20px;
      font-family: bold;
  }
 
@@ -54,8 +48,8 @@
 
  .params {
      margin: auto;
-     width: 90%;
      align-items: center;
+     padding-top: 50px;
  }
  
  label {
@@ -89,25 +83,11 @@
         &nbsp Upload next generation sequence data 
     </div>
 </div>
-<br><br>
-<div class="instructions">
-    <p><i class="fa fa-flag" aria-hidden="true"></i>
-        &nbsp Step 1: Choose a project ID whose data is already uploaded</p>
-    <p><i class="fa fa-flag" aria-hidden="true"></i>
-        &nbsp Step 2: Set analysis parameters using the parameters section below</p>
-    <p><i class="fa fa-flag" aria-hidden="true"></i>
-        &nbsp Step 3: Press the submit analysis button to start analysis</p> 
-    <br>
-</div>
-<br>
 
-<div class="scroll">
-    <div class="params">
-        {% crispy form %} 
-    </div>
-    <br>
+<div class="params">
+    {% crispy form %} 
 </div>
-<br>
+
 </div>
 <br>
 
