--- a/templates/uploads/upload-sample-metadata.html
+++ b/templates/uploads/upload-sample-metadata.html
@@ -11,11 +11,15 @@
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 <style>
     .analysis-container {
-        width: 90%;
+        height: 100%;
+        width: 100%;
         border-radius: 5px;
         background-color:#F8F8F8; 
         margin: auto;
-        height: 100%;
+        padding-left: 5%;
+        padding-right: 5%;
+        padding-top: 50px;
+        padding-bottom: 50px;
     }
     .instructions {
     height: 100px;
@@ -25,7 +29,6 @@
 /*    align-items: center; */
     justify-content: center;
     flex-direction: column;
-    padding: 20px 20px 20px 50px;
     border-bottom: 1px solid #E0E0E0;     
  }
     .analysis-header {
@@ -36,25 +39,18 @@
 /*    align-items: center; */
     justify-content: center;
     flex-direction: column;
-    border-bottom: 1px solid #E0E0E0; 
+    border-bottom: 1px solid rgb(70,130,180); 
   /*  background-color:lightgrey; */
 
  }
  .icon {
      color: black;
      font-size: 40px;
-     padding: 20px 20px 20px 20px;
      font-family: bold;
- }
-
- .scroll {
-    overflow-y: scroll ;
-    height: 350px;
  }
 
  .params {
      margin: auto;
-     width: 90%;
      align-items: center;
  }
  
@@ -94,7 +90,6 @@
     <div class="params">
         {% crispy form %} 
     </div>
-    <br>
 </div>
 <br>
 </div>
