--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -62,10 +62,16 @@
       <a class="nav-link" href="/home/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/search/advanced/">Data</a>
+      <a class="nav-link" href="/search/advanced/">NGS data</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/analysis/create/">Analysis</a>
+      <a class="nav-link" href="#">Sample metadata</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/analysis/create/">Create analysis</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/analysis/results/">HIVDR results</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Contact us</a>
