--- a/templates/analysis/detailed-project-analysis-results.html
+++ b/templates/analysis/detailed-project-analysis-results.html
@@ -78,21 +78,7 @@
         <i class="fa fa-medkit" aria-hidden="true">&nbsp</i> HIV Drug Resistance Testing Results
     </div>
 </div>
-<!-- <div>
-    <div class="sample-info">
-        <i class="fa fa-info-circle" aria-hidden="true">&nbsp</i> Basic Sample Information
-    </div>
-    <div class="sample-info-details">
-        <ul>
-            <li>Sample name:</li>
-            <li>Sample name:</li>
-            <li>Sample name:</li>
-            <li>Sample name:</li>
-            <li>Sample name:</li>
-            <li>Sample name:</li>
-        </ul>
-    </div>
-</div> -->
+
 <br>
 <div>
     <ul>
@@ -107,10 +93,71 @@
 
 <br>
 <div>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Sample ID</th>
+                <th>Drug Class</th>
+                <th>Drug Name type</th>
+                <th>Drug Score</th>
+                <th>Susceptibilty</th>
+                <th>Project ID</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for result in page_obj %}
+            <tr>
+                <td><a href="{% url 'sampleAnalysisResultsDetails' result.sample_ID %}">{{result.sample_ID}}</a></td>
+                <td>{{result.drugClass}}</td>
+                <td>{{result.drugName}}</td>
+                <td>{{result.drugScore}}</td>
+                <td>{{result.susceptibility}}</td>
+                <td><a href="{% url 'projectAnalysisResultsDetails' result.project_ID %}">{{result.project_ID}}</a></td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+<br><hr>
+<div>
+    <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1" aria-disabled="True">Previous</a>
+        </li>
+        {% endif %}
+        {% for i in page_obj.paginator.page_range %}
+        {% if page_obj.number == i %}
+            <li class="page-item active" aria-current="page">
+            <span class="page-link">
+                {{ i }}
+                <span class="sr-only">(current)</span>
+            </span>
+            </li>
+        {% else %}
+            <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+        {% endif %}
+        {% endfor %}
+        {% if page_obj.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1" aria-disabled="True">Next</a>
+        </li>
+        {% endif %}
+    </ul>
+</div>
+
+<!-- <div>
     <iframe src="{% static "analysis/hivdr_DRR030218.pdf" %}" style="width:100%; height:800px;" frameborder="0" allowfullscreen></iframe>
+</div> -->
 </div>
-</div>
-<br>
 <br>
 </div>
 <br>
