--- a/templates/analysis/new-analysis.html
+++ b/templates/analysis/new-analysis.html
@@ -68,6 +68,16 @@
 
 {% block content %}
 <div class="analysis-container">
+    {% for message in messages %}
+    <div class="container-fluid p-0">
+      <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="True">&times;</span>
+        </button>
+        {{ message }}
+      </div>
+    </div>
+    {% endfor %}
 <div class="analysis-header">
     <div class="icon">
         <i class="fa fa-play" aria-hidden="true"></i>
