--- a/templates/analysis/analysis-results.html
+++ b/templates/analysis/analysis-results.html
@@ -8,73 +8,14 @@
 {% block css %}
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-<style>
-    .analysis-container {
-        height: 100%;
-        width: 90%;
-        border-radius: 5px;
-        background-color:#F8F8F8; 
-        margin: auto;
-        padding-left: 5%;
-        padding-right: 5%;
-
-    }
-    .instructions {
-    height: 100px;
-    width: 100%;
-    border-radius: 5px;
-    display: flex;
-/*    align-items: center; */
-    justify-content: center;
-    flex-direction: column;
-    padding: 20px 20px 20px 50px;
-    border-bottom: 1px solid #E0E0E0;     
- }
-    .analysis-header {
-    height: 100px;
-    width: 100%;
-    border-radius: 0px;
-    display: flex;
-/*    align-items: center; */
-    justify-content: center;
-    flex-direction: column;
-    border-bottom: 1px solid rgb(70,130,180); 
-  /*  background-color:lightgrey; */
-
- }
- .icon {
-     color: black;
-     font-size: 40px;
-     padding: 20px 20px 20px 20px;
-     font-family: bold;
- }
-
- .params {
-     margin: auto;
-     width: 90%;
-     align-items: center;
- }
-
- .check {
-     margin: auto;
-     align-items: center;
-     text-align: center;
- }
-
-
-</style>
 {% endblock %}
 
 {% block content %}
-<div class="analysis-container">
-<div class="analysis-header">
-    <div class="icon">
-        <i class="fa fa-list" aria-hidden="true"></i>
-        &nbsp Analysis results
-    </div>
+<div class="container-fluid">
+<div class="mt-3 pt-3 p-3 border-bottom border-info">
+    <h1><i class="fa fa-list" aria-hidden="true">&nbsp</i>Analysis results</h1>
 </div>
-<br><br>
-<div>
+<div class="mt-3 pt-3 border p-4 shadow">
     <table class="table table-striped">
         <thead>
             <tr>
@@ -99,9 +40,7 @@
             {% endfor %}
         </tbody>
     </table>
-</div>
-<br><hr>
-<div>
+    <hr>
     <ul class="pagination justify-content-center">
         {% if page_obj.has_previous %}
         <li class="page-item">
