--- a/templates/analysis/new-analysis.html
+++ b/templates/analysis/new-analysis.html
@@ -7,90 +7,107 @@
 {% endblock %}
 
 {% block css %}
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 <style>
-    .analysis-container {
-        height: 100%;
-        /* width: 90%; */
-        border-radius: 5px;
-        background-color:#F8F8F8; 
-        margin: auto;
-        padding-left: 5%;
-        padding-right: 5%;
-        padding-top: 50px;
-        padding-bottom: 50px;
-    }
-
-    .analysis-header {
-    height: 100px;
-    width: 100%;
-    border-radius: 0px;
-    display: flex;
-/*    align-items: center; */
-    justify-content: center;
-    flex-direction: column;
-    border-bottom: 1px solid rgb(70,130,180); 
-  /*  background-color:lightgrey; */
-
- }
- .icon {
-     color: black;
-     font-size: 40px;
-     font-family: bold;
- }
-
- .scroll {
-    overflow-y: scroll ;
-    height: 370px;
-    padding-bottom: 20px;
- }
-
- .params {
-     margin: auto;
-     align-items: center;
-     /* width: 90%; */
-     padding-top: 5%;
-     padding-left: 20px;
- }
- 
  label {
     color:black;
     font-weight: bold;
  }
- .asteriskField {
-     color:red;
- }
  
-
+ astericks {
+  color: red;
+ }
 </style>
 {% endblock %}
 
 {% block content %}
-<div class="analysis-container">
+<div class="container-fluid">
     {% for message in messages %}
-    <div class="container-fluid p-0">
       <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="True">&times;</span>
         </button>
         {{ message }}
       </div>
-    </div>
     {% endfor %}
-<div class="analysis-header">
-    <div class="icon">
-        <i class="fa fa-play" aria-hidden="true"></i>
-        &nbsp Create New Analysis 
+<div class="mt-3 pt-3 p-3 border-bottom border-info">
+    <h1><i class="fa fa-play" aria-hidden="true">&nbsp</i>Create New analysis</h1>
+</div>
+<div class="mt-3 pt-3 border p-4 shadow">
+    <form method="POST">
+    {% csrf_token %}
+    <div class="form-row">
+        <div class="form-group col-md-6">
+        <label for="{{ form.project_ID.id_for_label }}" class="form-label"><astericks>*</astericks> {{ form.project_ID.label }}</label>
+        <input name="{{ form.project_ID.html_name }}" type="text" class="form-control" id="{{ form.project_ID.id_for_label }}" placeholder="E.g., PRJDB502" required>
+        </div>
+        <div class="form-group col-md-6">
+            <label for="{{ form.email.id_for_label }}" class="form-label"><astericks>*</astericks> {{ form.email.label }}</label>
+            <input name="{{ form.email.html_name }}" type="email" class="form-control" id="{{ form.email.id_for_label }}" placeholder="E.g., alfred@hivseqdb.org" required>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="{{ form.description.id_for_label }}" class="form-label"><astericks>*</astericks> {{ form.description.label }}</label>
+        <input name="{{ form.description.html_name }}" type="text" class="form-control" id="{{ form.description.id_for_label }}" placeholder="E.g., The Impact of Low-abundance HIV-1 drug resistance variants on treatment outcomes of DTG-based regimens in Uganda." required>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-4">
+            <label for="{{ form.minimum_Mutation_Frequency.id_for_label }}" class="form-label"><astericks>*</astericks> {{ form.minimum_Mutation_Frequency.label }}</label>
+            <input name="{{ form.minimum_Mutation_Frequency.html_name }}" type="text" class="form-control" id="{{ form.minimum_Mutation_Frequency.id_for_label }}" placeholder="Default is 0.01" required>      
+        </div>
+        <div class="form-group col-md-4">
+            <label for="{{ form.minimum_Read_Depth.id_for_label }}" class="form-label"><astericks>*</astericks> {{ form.minimum_Read_Depth.label }}</label>
+            <input name="{{ form.minimum_Read_Depth.html_name }}" type="text" class="form-control" id="{{ form.minimum_Read_Depth.id_for_label }}" placeholder="Default is 100" required>     
+        </div>
+        <div class="form-group col-md-4">
+            <label for="{{ form.consensus_Percentage.id_for_label }}" class="form-label"><astericks>*</astericks> {{ form.consensus_Percentage.label }}</label>
+            <input name="{{ form.consensus_Percentage.html_name }}" type="text" class="form-control" id="{{ form.consensus_Percentage.id_for_label }}" placeholder="Default is 20" required>      
+        </div>
     </div>
+        <hr>
+        <div class="form-group">
+            <div class="panel-group">
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <p>
+                      <a data-toggle="collapse" href="#collapse1"><label>More analysis parameters&nbsp<i class="fa-solid fa-caret-down"></i></label></a>
+                    </p>
+                  </div>
+                  <div id="collapse1" class="panel-collapse collapse">
+                    <div class="form-row">
+                        <div class="form-group col-md-4">
+                            <label for="{{ form.minimum_Mutation_Frequency.id_for_label }}" class="form-label">{{ form.minimum_Mutation_Frequency.label }}: </label>
+                            <input name="{{ form.minimum_Mutation_Frequency.html_name }}" type="text" class="form-control" id="{{ form.minimum_Mutation_Frequency.id_for_label }}" placeholder="Default is 0.01" required>      
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label for="{{ form.minimum_Read_Depth.id_for_label }}" class="form-label">{{ form.minimum_Read_Depth.label }}: </label>
+                            <input name="{{ form.minimum_Read_Depth.html_name }}" type="text" class="form-control" id="{{ form.minimum_Read_Depth.id_for_label }}" placeholder="Default is 100" required>     
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label for="{{ form.consensus_Percentage.id_for_label }}" class="form-label">{{ form.consensus_Percentage.label }}: </label>
+                            <input name="{{ form.consensus_Percentage.html_name }}" type="text" class="form-control" id="{{ form.consensus_Percentage.id_for_label }}" placeholder="Default is 20" required>      
+                        </div>
+                  </div>
+                  <div class="form-row">
+                    <div class="form-group col-md-4">
+                        <label for="{{ form.minimum_Mutation_Frequency.id_for_label }}" class="form-label">{{ form.minimum_Mutation_Frequency.label }}: </label>
+                        <input name="{{ form.minimum_Mutation_Frequency.html_name }}" type="text" class="form-control" id="{{ form.minimum_Mutation_Frequency.id_for_label }}" placeholder="Default is 0.01" required>      
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="{{ form.minimum_Read_Depth.id_for_label }}" class="form-label">{{ form.minimum_Read_Depth.label }}: </label>
+                        <input name="{{ form.minimum_Read_Depth.html_name }}" type="text" class="form-control" id="{{ form.minimum_Read_Depth.id_for_label }}" placeholder="Default is 100" required>     
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="{{ form.consensus_Percentage.id_for_label }}" class="form-label">{{ form.consensus_Percentage.label }}: </label>
+                        <input name="{{ form.consensus_Percentage.html_name }}" type="text" class="form-control" id="{{ form.consensus_Percentage.id_for_label }}" placeholder="Default is 20" required>      
+                    </div>
+                </div>
+              </div>
+        </div>
+        <hr>
+      <button type="submit" class="btn btn-success">Start analysis</button>
+      <button type="reset" class="btn btn-danger">Cancel</button>
+    </form>
 </div>
-
-<div class="scroll">
-    <div class="params">
-        {% crispy form %}  
-    </div>
 </div>
-</div>
-<br>
-
 {% endblock %}
