--- a/templates/uploads/upload-NGS-data.html
+++ b/templates/uploads/upload-NGS-data.html
@@ -10,57 +10,14 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 <style>
-    .analysis-container {
-        height: 100%;
-        /* width: 90%; */
-        border-radius: 5px;
-        background-color:#F8F8F8; 
-        margin: auto;
-        padding-left: 5%;
-        padding-right: 5%;
-        padding-top: 50px;
-        padding-bottom: 50px;
-
-    }
-    
-    .analysis-header {
-    height: 100px;
-    width: 100%;
-    border-radius: 0px;
-    display: flex;
-/*    align-items: center; */
-    justify-content: center;
-    flex-direction: column;
-    border-bottom: 1px solid rgb(70,130,180); 
-  /*  background-color:lightgrey; */
-
- }
- .icon {
-     color: black;
-     font-size: 40px;
-     font-family: bold;
- }
-
- .scroll {
-    overflow-y: scroll ;
-    height: 350px;
- }
-
- .params {
-     margin: auto;
-     align-items: center;
-     padding-top: 50px;
- }
- 
- label {
+    label {
     color:black;
     font-weight: bold;
  }
- .asteriskField {
-     color:red;
- }
  
-
+ .asteriskField {
+  color: red;
+ }
 </style>
 {% endblock %}
 
@@ -76,15 +33,11 @@
 </div>
 {% endfor %}
 
-<div class="analysis-container">
-<div class="analysis-header">
-    <div class="icon">
-        <i class="fa fa-cloud-upload" aria-hidden="true"></i>
-        &nbsp Upload next generation sequence data 
-    </div>
-</div>
-
-<div class="params">
+<div class="container-fluid">
+<div class="mt-3 pt-3 p-3 border-bottom border-info">
+    <h1><i class="fa fa-cloud-upload" aria-hidden="true">&nbsp</i>Upload next generation sequence data </h1>
+</div> 
+<div class="mt-3 pt-3 p-5 border shadow">
     {% crispy form %} 
 </div>
 
