--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -12,6 +12,7 @@
   {% endblock %} 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="{% static 'base/logo.png' %}"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -26,7 +27,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light navbar-custom rounded sticky-top" style="background-color: rgb(70,130,180);">
-    <a class="navbar-brand" style="color:#fff" href="#"><img src="{% static "base/logo.png" %}" height="30px"> <strong>HIVseqDB</strong></a>
+    <a class="navbar-brand" style="color:#fff" href="#"><img src="{% static 'base/logo.png' %}" height="30px"> <strong>HIVseqDB</strong></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
