--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -23,6 +23,10 @@
     width: 90%;
     margin: auto;
   }
+  .nav-tabs .nav-item .nav-link.active {
+    background-color: #c0c5ca;
+    color: rgb(61, 147, 245);
+  }
 </style>
 </head>
 <body>
