--- a/templates/analysis/minority-variants.html
+++ b/templates/analysis/minority-variants.html
@@ -75,7 +75,7 @@
 {% endblock %}
 
 {% block js %}  
-<script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script> 
 <script>
     Highcharts.chart('major-drms-plot', {
