--- a/templates/search/ngs-data.html
+++ b/templates/search/ngs-data.html
@@ -1,118 +1,89 @@
 {% extends "base/base.html" %}
 {% load static %}
-{% load crispy_forms_tags %}
 
 {% block title %}
-<title>HIVsedDB | Data uploads</title>
+<title>HIVsedDB | NGS data browser</title>
 {% endblock %}
 
 {% block css %}
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-<style>
-    .analysis-container {
-        height: 100%;
-        width: 90%;
-        border-radius: 5px;
-        background-color:#F8F8F8; 
-        margin: auto;
-        padding-left: 5%;
-        padding-right: 5%;
-
-    }
-    .instructions {
-    height: 100px;
-    width: 100%;
-    border-radius: 5px;
-    display: flex;
-/*    align-items: center; */
-    justify-content: center;
-    flex-direction: column;
-    padding: 20px 20px 20px 50px;
-    border-bottom: 1px solid #E0E0E0;     
- }
-    .analysis-header {
-    height: 100px;
-    width: 100%;
-    border-radius: 0px;
-    display: flex;
-/*    align-items: center; */
-    justify-content: center;
-    flex-direction: column;
-    border-bottom: 1px solid rgb(70,130,180); 
-  /*  background-color:lightgrey; */
-
- }
- .icon {
-     color: black;
-     font-size: 40px;
-     padding: 20px 20px 20px 20px;
-     font-family: bold;
- }
-
- .scroll {
-    overflow-y: scroll ;
-    height: 350px;
- }
-
- .params {
-     margin: auto;
-     width: 90%;
-     align-items: center;
- }
- 
- label {
-    color:black;
-    font-weight: bold;
- }
- .asteriskField {
-     color:red;
- }
- 
-
-</style>
 {% endblock %}
 
 {% block content %}
-<div class="analysis-container">
-<div class="analysis-header">
-    <div class="icon">
-        <i class="fa fa-search" aria-hidden="true"></i>
-        &nbsp Browse NGS data 
-    </div>
+<div class="container-fluid">
+<div class="mt-3 pt-3 p-3 border-bottom border-info">
+    <h1><i class="fa fa-search" aria-hidden="true">&nbsp</i>NGS data</h1>
 </div>
-<br><br>
 
-<div class="params">
+<!-- <div class="mt-3 pt-3 p-4 shadow">
+  <ul>
+      <p><i class="fa fa-list" aria-hidden="true">&nbsp</i> Download a template for sample data <a href="#">here</a></p>
+      <p><i class="fa fa-list" aria-hidden="true">&nbsp</i>Mandatory fields are shown in red in the template</p>
+  </ul>
+</div> -->
+
+<div class="mt-3 pt-3 border p-4 shadow">
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>Sample ID</th>
-                <th>Gender</th>
-                <th>Location</th>
-                <th>Age</th>
-                <th>Regimen</th>
-                <th>Viral load</th>
-                <th>Sampling date</th>
                 <th>Project ID</th>
+                <th>Region sequenced</th>
+                <th>Sequencing platform</th>
+                <th>Sequencing date</th>
+                <th>Fastq files</th>
+                <th>File size (MB)</th>
             </tr>
         </thead>
         <tbody>
             {% for result in page_obj %}
             <tr>
-                <td>{{result.sample_ID}}</td>
-                <td>{{result.gene}}</td>
-                <td>{{result.wildType}}</td>
-                <td>{{result.position}}</td>
-                <td>{{result.mutation}}</td>
-                <td>{{result.mutation_Frequency}}</td>
-                <td>{{result.project_ID}}</td>
+                <td><a href="#">{{result.project_Name}}</a></td>
+                <td>{{result.Region_Sequenced}}</td>
+                <td>{{result.Sequencing_Platform}}</td>
+                <td>{{result.Sequencing_Date}}</td>
+                <td><a href="{{result.fastq_Files.url}}">{{result.filename}}</a></td>
+                <td>{{result.filesize}}</td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
+    <hr>
+    <nav>
+    <ul class="pagination pagination-sm justify-content-center">
+        {% if page_obj.has_previous %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1" aria-disabled="True">Previous</a>
+        </li>
+        {% endif %}
+        {% for i in page_obj.paginator.page_range %}
+        {% if page_obj.number == i %}
+            <li class="page-item active" aria-current="page">
+            <span class="page-link">
+                {{ i }}
+                <span class="sr-only">(current)</span>
+            </span>
+            </li>
+        {% else %}
+            <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+        {% endif %}
+        {% endfor %}
+        {% if page_obj.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1" aria-disabled="True">Next</a>
+        </li>
+        {% endif %}
+    </ul>
+</nav>
 </div>
-<br><br>
 </div>
 <br>
 
