--- a/templates/uploads/upload-NGS-data.html
+++ b/templates/uploads/upload-NGS-data.html
@@ -35,8 +35,16 @@
 
 <div class="container-fluid">
 <div class="mt-3 pt-3 p-3 border-bottom border-info">
-    <h1><i class="fa fa-cloud-upload" aria-hidden="true">&nbsp</i>Upload next generation sequence data </h1>
+    <h1><i class="fa fa-cloud-upload" aria-hidden="true">&nbsp</i>Upload NGS Data and corresponding Sample Data </h1>
 </div> 
+
+<div class="mt-3 pt-3 p-4 shadow">
+  <ul>
+      <p><i class="fa fa-list" aria-hidden="true">&nbsp</i> Download a template for sample data <a href="#">here</a></p>
+      <p><i class="fa fa-list" aria-hidden="true">&nbsp</i>Mandatory fields are shown in red in the template</p>
+  </ul>
+</div>
+
 <div class="mt-3 pt-3 p-5 border shadow">
     {% crispy form %} 
 </div>
