Fix pagination for big tables

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -106,10 +106,10 @@
         <h5 class="mb-0 text-left">Partner institutions</h5>
         <hr>  
         <ul class="list-unstyled text-left">
-          <li><a href="#">Uganda Virus Research Institute (UVRI)</a></li>   
-          <li><a href="#">MRC/UVRI and LSHTM</a></li>   
-          <li><a href="#">Makerere University-BRecA</a></li>          
-          <li><a href="#">H3ABioNet</a></li>    
+          <li><a href="https://www.uvri.go.ug">Uganda Virus Research Institute (UVRI)</a></li>   
+          <li><a href="https://www.lshtm.ac.uk/research/units/mrc-uganda">MRC/UVRI and LSHTM</a></li>   
+          <li><a href="https://breca.mak.ac.ug">Makerere University-BRecA</a></li>          
+          <li><a href="https://www.h3abionet.org">H3ABioNet</a></li>    
         </ul>
       </div>
       <!--Grid column-->
@@ -117,11 +117,11 @@
         <h5 class="mb-0 text-left">Quick links</h5>
         <hr>  
         <ul class="list-unstyled text-left">
-          <li><a href="#">Home</a></li> 
-          <li><a href="#">Data upload</a></li> 
-          <li><a href="#">Data browser</a></li>    
-          <li><a href="#">Data Analysis</a></li>    
-          <li><a href="#">Analyses browser</a></li>    
+          <li><a href="/home/">Home</a></li> 
+          <li><a href="/uploads/ngs-data/">Data upload</a></li> 
+          <li><a href="/browse/ngs-data/">Data browser</a></li>    
+          <li><a href="/analysis/create/">Data Analysis</a></li>    
+          <li><a href="/analysis/results/">Analyses browser</a></li>    
           <li><a href="#">Tutorial</a></li>       
         </ul>
       <!--Grid column-->
