Add search panes and download buttons to data tables

--- a/templates/uploads/upload-NGS-data.html
+++ b/templates/uploads/upload-NGS-data.html
@@ -35,7 +35,7 @@
 
 <div class="container-fluid">
 <div class="mt-3 pt-3 p-3 border-bottom border-info">
-    <h1><i class="fa fa-cloud-upload" aria-hidden="true">&nbsp</i>Upload NGS Data and corresponding Sample Data </h1>
+    <h2><i class="fa fa-cloud-upload" aria-hidden="true">&nbsp</i>Upload NGS Data and corresponding sample data </h2>
 </div> 
 
 <div class="mt-3 pt-3 p-4 shadow">
