--- a/templates/analysis/analysis-results.html
+++ b/templates/analysis/analysis-results.html
@@ -13,22 +13,22 @@
 {% block content %}
 <div class="container-fluid">
 <div class="mt-3 pt-3 p-3 border-bottom border-info">
-    <h1><i class="fa fa-list" aria-hidden="true">&nbsp</i>Analysis results</h1>
+    <h2><i class="fa fa-list" aria-hidden="true">&nbsp</i>HIV Drug Resistance Testing Results</h2>
 </div>
 <div class="mt-3 pt-3 border p-4 shadow">
-    <table class="table table-striped">
+    <table id="hivdr" class="table table-striped nowrap">
         <thead>
             <tr>
                 <th>Sample ID</th>
                 <th>Drug Class</th>
-                <th>Drug Name type</th>
+                <th>Drug Name</th>
                 <th>Drug Score</th>
                 <th>Susceptibilty</th>
                 <th>Project ID</th>
             </tr>
         </thead>
         <tbody>
-            {% for result in page_obj %}
+            {% for result in results %}
             <tr>
                 <td><a href="{% url 'sampleAnalysisResultsDetails' result.sample_ID %}">{{result.sample_ID}}</a></td>
                 <td>{{result.drugClass}}</td>
@@ -41,26 +41,42 @@
         </tbody>
     </table>
     <hr>
-    <div class="pagination justify-content-center">
-        <span class="step-links">
-            {% if page_obj.has_previous %}
-                <a href="?page=1">&laquo; First</a>
-                <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
-            {% endif %}
-    
-            <span class="current">
-                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-            </span>
-    
-            {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}">Next</a>
-                <a href="?page={{ page_obj.paginator.num_pages }}">Last &raquo;</a>
-            {% endif %}
-        </span>
-    </div>
 </div>
 <br>
 </div>
-<br>
+{% endblock %}
+{% block js %}
+<script>
+  $(document).ready(function() {
+    var table = $('#hivdr').DataTable({
+        select: true,
+        dom: 'BPrtip',
+        
+        buttons: [
+            'pageLength',
+            { extend: 'csv', text: '<i class="fa fa-file-csv" aria-hidden="true"></i> Export as CSV' },
+            { extend: 'excel', text: '<i class="fa fa-file-excel" aria-hidden="true"></i> Export as EXCEL' },
+            { extend: 'pdf', text: '<i class="fa fa-file-pdf" aria-hidden="true"></i> Export as PDF' },
+            { extend: 'print', text: '<i class="fa fa-print" aria-hidden="true"></i> Print' },
+        ],
+        columnDefs: [
+            {
+                searchPanes: {
+                    initCollapsed: true,
+                },
+                targets: [0,1,2,4,5]
+            },
+            {
+                searchPanes: {
+                    show: false
+                },
+                targets: [3]
+            }
+        ]
 
+    });
+    table.searchPanes.container().prependTo(table.table().container());
+    table.searchPanes.resizePanes();
+});
+</script>
 {% endblock %}
