--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -14,9 +14,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="{% static 'base/logo.png' %}"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.3/css/dataTables.bootstrap4.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/searchpanes/2.1.1/css/searchPanes.bootstrap4.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/select/1.6.1/css/select.bootstrap4.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.3/css/jquery.dataTables.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.3.5/css/buttons.dataTables.min.css">
+  
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>  
+  
+  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+  <script src="//cdn.datatables.net/1.13.3/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.13.3/js/dataTables.bootstrap4.min.js"></script>
+  <script src="https://cdn.datatables.net/searchpanes/2.1.1/js/dataTables.searchPanes.min.js"></script>
+  <script src="https://cdn.datatables.net/searchpanes/2.1.1/js/searchPanes.bootstrap4.min.js"></script>
+  <script src="https://cdn.datatables.net/select/1.6.1/js/dataTables.select.min.js"></script>
+  
+  <script src="https://cdn.datatables.net/buttons/2.3.5/js/dataTables.buttons.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+  <script src="https://cdn.datatables.net/buttons/2.3.5/js/buttons.html5.min.js"></script>
+  <script src="https://cdn.datatables.net/buttons/2.3.5/js/buttons.print.min.js"></script>
+  
   <title>HIVsedDB</title>
 <style>
   body{
@@ -85,9 +106,9 @@
   </div>
 </div> -->
 
-<footer class="bg-light text-center mt-4">
+<footer class="bg-light text-center mt-4 pt-3 p-3">
   <!-- Grid container -->
-  <div class="container p-3">
+  <div class="container mt-4">
     <!--Grid row-->
     <div class="row">
       <!--Grid column-->
@@ -133,7 +154,7 @@
     <div class="col-md-12 text-dark">
       <ul class="list-unstyled text-right">
         <hr>
-        <li>Uganda Virus Research Institute &copy; <script>document.write(new Date().getFullYear())</script></li>
+        <li>&copy; <script>document.write(new Date().getFullYear())</script> Uganda Virus Research Institute </li>
       </ul>
     </div>
   </div>
