--- a/templates/search/sample-data.html
+++ b/templates/search/sample-data.html
@@ -13,7 +13,7 @@
 {% block content %}
 <div class="container-fluid">
 <div class="mt-3 pt-3 p-3 border-bottom border-info">
-    <h1><i class="fa fa-search" aria-hidden="true">&nbsp</i>Sample metadata</h1>
+    <h2><i class="fa fa-search" aria-hidden="true">&nbsp</i>Sample metadata</h2>
 </div>
 
 <!-- <div class="mt-3 pt-3 p-4 shadow">
@@ -24,7 +24,7 @@
 </div> -->
 
 <div class="mt-3 pt-3 border p-4 shadow">
-    <table class="table table-striped">
+    <table id="samples" class="table table-striped">
         <thead>
             <tr>
                 <th>Sample</th>
@@ -41,7 +41,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for result in page_obj %}
+            {% for result in results %}
             <tr>
                 <td>{{result.sampleName}}</td>
                 <td>{{result.samplingDate}}</td>
@@ -59,27 +59,38 @@
         </tbody>
     </table>
     <hr>
-    <nav>
-        <div class="pagination justify-content-center">
-            <span class="step-links">
-                {% if page_obj.has_previous %}
-                    <a href="?page=1">&laquo; First</a>
-                    <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
-                {% endif %}
-        
-                <span class="current">
-                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                </span>
-        
-                {% if page_obj.has_next %}
-                    <a href="?page={{ page_obj.next_page_number }}">Next</a>
-                    <a href="?page={{ page_obj.paginator.num_pages }}">Last &raquo;</a>
-                {% endif %}
-            </span>
-        </div>
-</nav>
 </div>
 </div>
 <br>
 
+{% endblock %}
+
+{% block js %}
+<script>
+  $(document).ready(function() {
+    var table = $('#samples').DataTable({
+        select: true,
+        dom: 'BPrtip',
+        
+        buttons: [
+            'pageLength',
+            { extend: 'csv', text: '<i class="fa fa-file-csv" aria-hidden="true"></i> Export as CSV' },
+            { extend: 'excel', text: '<i class="fa fa-file-excel" aria-hidden="true"></i> Export as EXCEL' },
+            { extend: 'pdf', text: '<i class="fa fa-file-pdf" aria-hidden="true"></i> Export as PDF' },
+            { extend: 'print', text: '<i class="fa fa-print" aria-hidden="true"></i> Print' },
+        ],
+        columnDefs: [
+            {
+                searchPanes: {
+                    initCollapsed: true,
+                },
+                targets: [1,2,3,4,5,6,7,8,9,10]
+            }
+        ]
+
+    });
+    table.searchPanes.container().prependTo(table.table().container());
+    table.searchPanes.resizePanes();
+});
+</script>
 {% endblock %}
