Fix typos on page titles

--- a/templates/analysis/analysis-results.html
+++ b/templates/analysis/analysis-results.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-<title>HIVsedDB | HIVDR analysis results</title>
+<title>HIVseqDB | HIVDR analysis results</title>
 {% endblock %}
 
 {% block css %}
