--- a/templates/analysis/minority-variants.html
+++ b/templates/analysis/minority-variants.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-<title>HIVsedDB | Minority variants</title>
+<title>HIVseqDB | Minority variants</title>
 {% endblock %}
 
 {% block content %}
