--- a/templates/analysis/new-analysis.html
+++ b/templates/analysis/new-analysis.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block title %}
-<title>HIVsedDB | New HIVDR analysis</title>
+<title>HIVseqDB | New HIVDR analysis</title>
 {% endblock %}
 
 {% block css %}
