--- a/templates/base/home.html
+++ b/templates/base/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-<title>HIVsedDB | Home</title>
+<title>HIVseqDB | Home</title>
 {% endblock %}
 
 {% block css %}
