--- a/templates/search/ngs-data.html
+++ b/templates/search/ngs-data.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-<title>HIVsedDB | NGS data browser</title>
+<title>HIVseqDB | NGS data browser</title>
 {% endblock %}
 
 {% block css %}
