--- a/templates/search/sample-data.html
+++ b/templates/search/sample-data.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-<title>HIVsedDB | Sample data browser</title>
+<title>HIVseqDB | Sample data browser</title>
 {% endblock %}
 
 {% block css %}
