--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -38,7 +38,7 @@
   <script src="https://cdn.datatables.net/buttons/2.3.5/js/buttons.html5.min.js"></script>
   <script src="https://cdn.datatables.net/buttons/2.3.5/js/buttons.print.min.js"></script>
   
-  <title>HIVsedDB</title>
+  <title>HIVseqDB</title>
 <style>
   body{
     width: 90%;
