--- a/templates/uploads/upload-sample-metadata.html
+++ b/templates/uploads/upload-sample-metadata.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block title %}
-<title>HIVsedDB | Data uploads</title>
+<title>HIVseqDB | Data uploads</title>
 {% endblock %}
 
 {% block css %}
